--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remcat-client",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "axios": "^1.7.3",
+    "axios": "^0.21.4",
+    "axios-cache-adapter": "^2.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.24",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.20",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
@@ -27,6 +36,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
