--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "remcat-client",
-  "version": "1.0.0",
-  "main": "expo-router/entry",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "axios": "^0.21.4",
-    "axios-cache-adapter": "^2.7.3",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~51.0.24",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.20",
-    "expo-status-bar": "~1.12.1",
-    "nativewind": "^2.0.11",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
-    "tailwindcss": "3.3.2",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+    "name": "remcat-client",
+    "version": "1.0.0",
+    "main": "expo-router/entry",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@expo/metro-runtime": "~3.2.1",
+        "axios": "^0.21.4",
+        "axios-cache-adapter": "^2.7.3",
+        "babel-plugin-module-resolver": "^5.0.2",
+        "dotenv": "^16.4.5",
+        "expo": "~51.0.24",
+        "expo-constants": "~16.0.2",
+        "expo-env": "^1.1.1",
+        "expo-linking": "~6.3.1",
+        "expo-router": "~3.5.20",
+        "expo-status-bar": "~1.12.1",
+        "nativewind": "^2.0.11",
+        "prettier-plugin-tailwindcss": "^0.4.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.74.3",
+        "react-native-safe-area-context": "4.10.5",
+        "react-native-screens": "3.31.1",
+        "react-native-web": "~0.19.10"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@types/react": "~18.2.45",
+        "eslint": "^8.57.0",
+        "eslint-config-expo": "^7.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "prettier": "^3.3.3",
+        "tailwindcss": "3.3.2",
+        "typescript": "^5.3.3"
+    },
+    "private": true
 }
