--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21.4",
         "axios-cache-adapter": "^2.7.3",
         "babel-plugin-module-resolver": "^5.0.2",
+        "babel-plugin-transform-inline-environment-variables": "^0.4.4",
         "dotenv": "^16.4.5",
         "expo": "~51.0.24",
         "expo-constants": "~16.0.2",
