--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@expo/metro-runtime": "~3.2.1",
+        "@reduxjs/toolkit": "^2.2.7",
         "axios": "^0.21.4",
         "axios-cache-adapter": "^2.7.3",
         "babel-plugin-module-resolver": "^5.0.2",
@@ -29,7 +30,8 @@
         "react-native": "0.74.3",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-web": "~0.19.10"
+        "react-native-web": "~0.19.10",
+        "react-redux": "^9.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
