--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-picker/picker": "2.7.5",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.21.4",
     "axios-cache-adapter": "^2.7.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.4.5",
+    "eas-cli": "^10.2.4",
     "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
     "expo-env": "^1.1.1",
@@ -31,8 +33,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "@react-native-picker/picker": "2.7.5"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
